Cache refinements including a trigger system.

--- a/scratch1.ipynb
+++ b/scratch1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "optical-yesterday",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "dynamic-hamilton",
    "metadata": {},
    "outputs": [],
@@ -25,8 +25,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "veterinary-rebound",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cx = fetch_ids_df('country_month')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "naughty-episode",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cx.index.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "dedicated-wayne",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cx = cx.set_index('id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "reverse-evanescence",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'xxx\",\"ppp\",\"aaa\",\"ff'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'\",\"'.join(['xxx','ppp','aaa','ff'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "partial-character",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cx['muie'] = 1\n",
+    "cx['pula'] = 'real'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "atmospheric-spanish",
    "metadata": {},
    "outputs": [
     {
@@ -50,116 +112,262 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>id</th>\n",
        "      <th>month_id</th>\n",
        "      <th>country_id</th>\n",
+       "      <th>muie</th>\n",
+       "      <th>pula</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6173</td>\n",
+       "      <th>6173</th>\n",
        "      <td>365</td>\n",
        "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>7625</td>\n",
+       "      <th>7625</th>\n",
        "      <td>365</td>\n",
        "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>9077</td>\n",
+       "      <th>9077</th>\n",
        "      <td>365</td>\n",
        "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>13433</td>\n",
+       "      <th>13433</th>\n",
        "      <td>365</td>\n",
        "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>16337</td>\n",
+       "      <th>16337</th>\n",
        "      <td>365</td>\n",
        "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>278641</th>\n",
-       "      <td>238551</td>\n",
+       "      <th>238551</th>\n",
        "      <td>207</td>\n",
        "      <td>167</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>278642</th>\n",
-       "      <td>244490</td>\n",
+       "      <th>244490</th>\n",
        "      <td>218</td>\n",
        "      <td>183</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>278643</th>\n",
-       "      <td>270921</td>\n",
+       "      <th>270921</th>\n",
        "      <td>421</td>\n",
        "      <td>237</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>278644</th>\n",
-       "      <td>277585</td>\n",
+       "      <th>277585</th>\n",
        "      <td>406</td>\n",
        "      <td>246</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>278645</th>\n",
-       "      <td>23332</td>\n",
+       "      <th>23332</th>\n",
        "      <td>120</td>\n",
        "      <td>16</td>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>278646 rows × 3 columns</p>\n",
+       "<p>278646 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id  month_id  country_id\n",
-       "0         6173       365           5\n",
-       "1         7625       365           6\n",
-       "2         9077       365           7\n",
-       "3        13433       365          10\n",
-       "4        16337       365          12\n",
-       "...        ...       ...         ...\n",
-       "278641  238551       207         167\n",
-       "278642  244490       218         183\n",
-       "278643  270921       421         237\n",
-       "278644  277585       406         246\n",
-       "278645   23332       120          16\n",
+       "        month_id  country_id  muie  pula\n",
+       "id                                      \n",
+       "6173         365           5     1  real\n",
+       "7625         365           6     1  real\n",
+       "9077         365           7     1  real\n",
+       "13433        365          10     1  real\n",
+       "16337        365          12     1  real\n",
+       "...          ...         ...   ...   ...\n",
+       "238551       207         167     1  real\n",
+       "244490       218         183     1  real\n",
+       "270921       421         237     1  real\n",
+       "277585       406         246     1  real\n",
+       "23332        120          16     1  real\n",
        "\n",
-       "[278646 rows x 3 columns]"
+       "[278646 rows x 4 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fetch_ids_df('country_month')"
+    "cx"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "naughty-episode",
+   "execution_count": 34,
+   "id": "informative-mailman",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "other_ids = [i for i in list(cx.columns) if '_id' in i.lower()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "infinite-destruction",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>muie</th>\n",
+       "      <th>pula</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6173</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7625</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9077</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13433</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16337</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238551</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244490</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270921</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277585</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23332</th>\n",
+       "      <td>1</td>\n",
+       "      <td>real</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>278646 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        muie  pula\n",
+       "id                \n",
+       "6173       1  real\n",
+       "7625       1  real\n",
+       "9077       1  real\n",
+       "13433      1  real\n",
+       "16337      1  real\n",
+       "...      ...   ...\n",
+       "238551     1  real\n",
+       "244490     1  real\n",
+       "270921     1  real\n",
+       "277585     1  real\n",
+       "23332      1  real\n",
+       "\n",
+       "[278646 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cx.drop(other_ids,axis=1)"
+   ]
   },
   {
    "cell_type": "code",
